--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "owner": "neverlosecc",
-  "repo": "api-documentation",
+  "owner": "YOUR REPOSITORY OWNER",
+  "repo": "REPOSITORY NAME",
   "additions": {
     "cheat": [
       "other/custommenu.md"
